# PlasmaEngine

./: CMakeLists.txt
BuildSystem/CMake/: PlasmaCI.cmake  PlasmaUtils.cmake  PlasmaUtilsCppFlags.cmake  PlasmaUtilsDetect.cmake  PlasmaUtilsPCH.cmake  PlasmaUtilsSubmodule.cmake  PlasmaUtilsTarget.cmake  PlasmaUtilsTargetCS.cmake  PlasmaUtilsUnityFiles.cmake  PlasmaUtilsVars.cmake
Data/: Commands.data
Data/Fallback/Content/: Fallback.library
Resources/PlasmaCore/: MaskedAlbedoMap.lightningfrag  MaskedMetallicMap.lightningfrag  MaskedNormalMap.lightningfrag  MaskedRoughnessMap.lightningfrag
Source/Core/CodeTranslator/: CMakeLists.txt
Source/Core/Common/: CMakeLists.txt
Source/Core/Content/: CMakeLists.txt
Source/Core/Engine/: CMakeLists.txt
Source/Core/Gameplay/: CMakeLists.txt
Source/Core/Geometry/: CMakeLists.txt
Source/Core/SelfExtractor/: CMakeLists.txt
Source/Core/Serialization/: CMakeLists.txt
Source/Core/Startup/: CMakeLists.txt
Source/Core/Support/: CMakeLists.txt
Source/Editor/EditorCore/: CMakeLists.txt  EditorMain.cpp  EditorMain.hpp  EditorStandard.hpp  TestGraph.cpp  TestGraph.hpp
Source/Editor/Modules/ExportTool/: CMakeLists.txt
Source/Editor/PlasmaEditor/: CMakeLists.txt
Source/Graphics/GraphicsRuntime/: CMakeLists.txt  Camera.hpp
Source/Graphics/RendererGL/: CMakeLists.txt
Source/Launcher/PlasmaLauncher/: CMakeLists.txt
Source/Launcher/PlasmaLauncherShell/: CMakeLists.txt
Source/Lightning/: CMakeLists.txt
Source/Lightning/LightningCore/: CMakeLists.txt  Core.cpp
Source/Lightning/LightningScript/: CMakeLists.txt
Source/Lightning/LightningShaders/: CMakeLists.txt
Source/Networking/NetworkCore/: CMakeLists.txt
Source/Networking/Replication/: CMakeLists.txt
Source/Physics/: CMakeLists.txt
Source/Platform/Windows/: CMakeLists.txt
Source/Sound/: CMakeLists.txt
Source/UI/Widget/: CMakeLists.txt
